# AstraTraineeProject

./: .gitignore  .gitignore.swp  CMakeLists.txt  CMakeSettings.json  README.md  compile_commands.json  tags
BACKUP/: maincontrollerqclass.cpp
TraineeProjectSource/: AimingClass.cpp  AimingClass.h  AimingControlBest.cpp  AimingControlBest.h  AirSystemClass.cpp  CMakeLists.txt  CMakeListsAltai.txt  CMakeSettings.json  CalmanFilterClass.cpp  CalmanFilterClass.h  CameraInterfaceClass.cpp  CameraInterfaceClass.h  ChillSystemClass.cpp  ChillSystemClass.h  CommonLaserInterfaceClass.cpp  CommonLaserInterfaceClass.h  DataAimingErrorStructure.h  DataCamerasStructure.h  DataChillerStructure.h  DataDeviceStructureCommon.h  DataEngineStructure.h  DataImageProcStructure.h  DataLaserStruct.h  DataTemperatureStructure.h  DataToDisplayStructure.h  DebugStream.h  DigitalClock.cpp  DigitalClock.h  EngineControlClass.cpp  EngineControlClass.h  EngineInterfaceClass.cpp  EngineInterfaceClass.h  ErrorPortControl.cpp  ErrorPortControl.h  ErrorRecieverClass.cpp  ErrorRecieverClass.h  HandleControlInterface.h  ImageProcessingClass.cpp  ImageProcessingClass.h  ImageStruct.h  (+85 more)
TraineeProjectSource/DataTypes/: DataChillerStructure.h  DataWeatherStructure.h
TraineeProjectSource/LASERS/: LaserCommonInterface.cpp  LaserCommonInterface.h  LaserControlClass.cpp  LaserControlClass.h  LaserPilotInterface.cpp  LaserPilotInterface.h  LaserPointerInterface.cpp  LaserPointerInterface.h  LaserPowerCommands.h  LaserPowerInterface.cpp  LaserPowerInterface.h
TraineeProjectSource/REMOTE_CONTROL/: RemoteControlInterface.cpp  RemoteControlInterface.h  RemoteControlProtocol.cpp  RemoteControlProtocol.h  TCPEngineInterface.cpp  TCPEngineInterface.h  UDPEngineInterface.cpp  UDPEngineInterface.h
TraineeProjectSource/TraineeProjectSource/: AimingClass.cpp  AirSystemClass.cpp  AirSystemClass.h  CMakeLists.txt  CameraInterfaceClass.cpp  ChillSystemClass.cpp  ChillSystemClass.h  DataAimingErrorStructure.h  DataCamerasStructure.h  DataEngineStructure.h  DataImageProcStructure.h  DataLaserStruct.h  DataTemperatureStructure.h  DataToDisplayStructure.h  DebugStream.h  DigitalClock.cpp  EngineControlClass.h  EngineInterfaceClass.cpp  FC_STRUCTS.h  ImageProcessingClass.cpp  ImageProcessingClass.h  KLPInterfaceClass.cpp  KLPInterfaceClass.h  KalmanFilterClass.cpp  KalmanFilterClass.h  LaserControlClass.cpp  LaserControlClass.h  LaserPilotInterfaceClass.cpp  LaserPilotInterfaceClass.h  LaserPointerInterfaceClass.cpp  LaserPowerInterfaceClass.cpp  PassTwoCoordClass.cpp  PassTwoCoordClass.h  RemoteControlClass.cpp  RemoteControlClass.h  SinusGeneratorClass.cpp  SinusGeneratorClass.h  TransformCoordClass.cpp  main.cpp  maincontrollerqclass.cpp  (+6 more)
TraineeProjectSource/TraineeProjectSource/gui_sources/: AdjustableWidget.h  PilotLaserWindow.cpp  RemoteAimingWindowControl.cpp  RemoteAimingWindowControl.h  aimingblockwindow.cpp  aimingblockwindow.h  cameracontrolwindow.cpp  camerawindow.cpp  engineblockwindow.cpp  engineblockwindow.h  enginecontrolwindow.cpp  enginecontrolwindow.h  graphicswindow.cpp  graphicswindow.h  graphicwidgetnode.cpp  graphicwidgetnode.h  imageprocessingdisplaywindow.cpp  imageprocessingdisplaywindow.h  imageprocessingwindow.cpp  imageprocessingwindow.h  kalmanwindow.h  labelimage.cpp  laserblockwindow.cpp  laserblockwindow.h  link_line.cpp  link_line.h  mainblockwindow.cpp  mainblockwindow.h  mainwindowqclass.cpp  mainwindowqclass.h  node.cpp  node.h  pidwindow2.cpp  pidwindow2.h  windowsinussource.cpp
TraineeProjectSource/TraineeProjectSource/rotate_optimization/: CMakeLists.txt  RotateOperationContainer.cpp  RotateOperationContainer.h
TraineeProjectSource/TraineeProjectSource/ui_files/: aimingblockwindow.ui  enginecontrolwindow.ui  graphicswindow.ui  imageprocessingdisplaywindow.ui  laserblockwindow.ui  mainwindowqclass.ui  pidwindow2.ui  windowsinussource.ui
TraineeProjectSource/gui_sources/: AdjustableWidget.cpp  AdjustableWidget.h  ChillerWindowDisplay.cpp  ChillerWindowDisplay.h  ErrorPortControl.cpp  ErrorPortControl.h  PilotLaserWindow.cpp  PilotLaserWindow.h  RemoteAimingWindowControl.cpp  RemoteWindowControl.cpp  RemoteWindowControl.h  aimingblockwindow.cpp  aimingblockwindow.h  cameracontrolwindow.cpp  cameracontrolwindow.h  camerawindow.cpp  camerawindow.h  engineblockwindow.cpp  enginecontrolwindow.cpp  graphicswindow.cpp  graphicwidgetnode.cpp  graphicwidgetnode.h  imageprocessingdisplaywindow.cpp  imageprocessingwindow.cpp  kalmanwindow.cpp  labelimage.cpp  laserblockwindow.cpp  mainblockwindow.cpp  mainwindowclass.cpp  mainwindowclass.h  mainwindowqclass.cpp  mainwindowqclass.h  pid_control_window.cpp  pid_control_window.h  pidwindow.cpp  pidwindow2.cpp  pidwindow2.h  windowsinussource.cpp  windowsinussource.h
TraineeProjectSource/rotate_optimization/: CMakeLists.txt  RotateOperationContainer.cpp  RotateOptimization_global.h
TraineeProjectSource/ui_files/: ChillerWindowDisplay.ui  ErrorPortControl.ui  PilotLaserWindow.ui  RemoteAimingWindowControl.ui  RemoteCommandDisplay.ui  aimingblockwindow.ui  cameracontrolwindow.ui  camerawindow.ui  engineblockwindow.ui  enginecontrolwindow.ui  graphicswindow.ui  imageprocessingdisplaywindow.ui  imageprocessingwindow.ui  kalmanwindow.ui  laserblockwindow.ui  mainblockwindow.ui  mainwindowclass.ui  mainwindowqclass.ui  pid_control_window.ui  pidwindow2.ui  widget.ui  windowsinussource.ui
